--- a/Games/index.html
+++ b/Games/index.html
@@ -13,7 +13,7 @@
         <li><a href="#"><img src="/imgs/home.png" alt="Home"></a></li>
         <li><a href="#"><img src="/imgs/console-controller.png" alt="Games"></a></li>
         <li><a href="#"><img src="/imgs/star.png" alt="Favorites"></a></li>
-        <li><a href="#"><img src="/imgs/user.png" alt="Profile"></a></li>
+        <li><a href="#"><img src="/imgs/settings.png" alt="settings"></a></li>
       </ul>
     </nav>
   </header>
